prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_16.zkc
//error:2:12-18:unknown symbol
type ALIAS=[u8;C]

fn f12345(xs:[u8;4]) -> (ys:ALIAS) {
   ys = xs
}
